--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,10 +1,119 @@
 /* font */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+/* shared styles */
 
-*
-    {
-        font-family: "Work Sans", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: <weight>;
-        font-style: normal;
-      }
+.btn-primary {
+
+    border-radius: 8px;
+    background: rgb(255, 144, 14);
+    color: rgb(255, 255, 255);
+    font-size: 1.25rem;
+    cursor: pointer;
+    font-weight: 600;
+    padding: 20px 25px;
+    border: 0;
+}
+
+
+
+
+* {
+    font-family: "Work Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+}
+
+/* header styles */
+
+header {
+    background: rgba(255, 144, 14, 0.1);
+    padding: 50px 240px;
+}
+
+.nav-title {
+    font-size: 3rem;
+    font-weight: 700;
+    color: #131313;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav>ul {
+    display: flex;
+}
+
+nav li {
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+nav li a {
+    text-decoration: none;
+    color: rgb(66, 66, 66);
+}
+
+/* banner-style */
+
+.banner-content {
+
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+
+}
+
+.banner-title {
+    color: rgb(19, 19, 19);
+
+    font-size: 4rem;
+
+    font-weight: 700;
+}
+
+.banner-description {
+    color: rgb(114, 114, 114);
+
+
+    font-size: 1rem;
+
+    font-weight: 400;
+}
+
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+
+}
+
+/* responsive media queries mobile  */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+
+    nav{
+        flex-direction: column;
+    }
+}
+
+/* responsive media queries tablet */
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header{
+        padding: 50px;
+    }
+
+    nav{
+        flex-direction: column;
+    }
+
+
+    
+}
