--- a/styles/architect.css
+++ b/styles/architect.css
@@ -17,7 +17,7 @@
 
 
 
-* {
+ * {
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: <weight>;
@@ -91,6 +91,11 @@ nav li a {
     width: 100%;
 
 }
+/* main styles */
+main{
+    max-width: 1440px;
+    margin: o auto;
+}
 
 /* responsive media queries mobile  */
 @media screen and (max-width: 576px) {
@@ -116,4 +121,32 @@ nav li a {
 
 
     
+}
+
+/* teams styles */
+
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-right: 70px ;
+    padding-left: 70px ;
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+
+.quick-list{
+   color:  rgb(114, 114, 114);
+   font-weight: 500;
+}
+.text-features{
+    color: rgb(255, 144, 14);
+    font-weight: 500;
 }
