--- a/styles/architect.css
+++ b/styles/architect.css
@@ -14,10 +14,17 @@
     border: 0;
 }
 
+.text-gray{
+
+    color: rgb(114, 114, 114);
+
+
+}
 
 
 
- * {
+
+* {
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: <weight>;
@@ -78,7 +85,7 @@ nav li a {
 }
 
 .banner-description {
-    color: rgb(114, 114, 114);
+   
 
 
     font-size: 1rem;
@@ -86,67 +93,90 @@ nav li a {
     font-weight: 400;
 }
 
-.banner img{
+.banner img {
     margin-top: 20px;
     width: 100%;
 
 }
+
 /* main styles */
-main{
+main {
     max-width: 1440px;
-    margin: o auto;
+    margin: 70px auto;
+
+}
+
+
+/* teams styles */
+
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.teams-content {
+    padding-right: 70px;
+    padding-left: 70px;
+}
+
+.teams-title {
+    font-size: 2.8rem;
+}
+
+.teams-title .quick-list {
+    color: rgb(114, 114, 114);
+    font-weight: 500;
+}
+
+.text-features {
+    color: rgb(255, 144, 14);
+    font-weight: 700;
+}
+
+.teams-description {
+    color: rgb(114, 114, 114);
+
+    
+
+    font-size: 16px;
+
+    font-weight: 400;
 }
 
 /* responsive media queries mobile  */
 @media screen and (max-width: 576px) {
-    header{
+    header {
         padding: 20px;
     }
 
-    nav{
+    nav , .teams-container {
         flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding: 20px 20px;
     }
 }
 
 /* responsive media queries tablet */
 
 @media screen and (min-width: 576px) and (max-width: 960px) {
-    header{
+    header {
         padding: 50px;
     }
 
-    nav{
+    nav, .teams-container {
         flex-direction: column;
     }
 
 
-    
-}
 
-/* teams styles */
-
-.teams-container{
-    display: flex;
-    align-items: center;
-}
-.teams-img-container{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 1.5rem;
-}
-.teams-content{
-    padding-right: 70px ;
-    padding-left: 70px ;
-}
-.teams-title{
-    font-size: 2.8rem;
-}
-
-.quick-list{
-   color:  rgb(114, 114, 114);
-   font-weight: 500;
-}
-.text-features{
-    color: rgb(255, 144, 14);
-    font-weight: 500;
 }
