--- a/styles/architect.css
+++ b/styles/architect.css
@@ -20,6 +20,11 @@
 
 
 }
+.section-title{
+    font-size: 3rem;
+    font-weight: 700;
+    color: #131313;
+}
 
 
 
@@ -38,11 +43,7 @@ header {
     padding: 50px 240px;
 }
 
-.nav-title {
-    font-size: 3rem;
-    font-weight: 700;
-    color: #131313;
-}
+
 
 nav {
     display: flex;
