--- a/styles/architect.css
+++ b/styles/architect.css
@@ -155,7 +155,7 @@ main {
 .facts-card-container .card {
     border: 1px solid rgb(255, 144, 14);
     text-align: center;
-    padding:  30px;
+    padding: 30px;
 
 
     border-radius: 8px;
@@ -169,7 +169,8 @@ main {
     margin-bottom: 10px;
 
 }
-.facts-card-container .card-title{
+
+.facts-card-container .card-title {
     font-weight: 600;
     font-size: 1.25rem;
     margin-top: 5px;
@@ -181,6 +182,26 @@ main {
     justify-content: space-around;
 }
 
+/* sponsors styles */
+.sponsors {
+    text-align: center;
+}
+
+.sponsors-img-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    align-items: center;
+    gap: 40px;
+
+}
+
+.sponsors-img-container img {
+    width: 159.56px;
+
+    
+}
+
 /* responsive media queries mobile  */
 @media screen and (max-width: 576px) {
     header {
@@ -188,7 +209,9 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
 
@@ -196,9 +219,16 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .teams-content {
-        padding: 20px 20px;
+    .teams-content,
+    .facts-card-container {
+        padding-left: 20px;
+        padding-right: 20px;
     }
+
+    .facts-card-container {
+        gap: 20px;
+    }
+
 }
 
 /* responsive media queries tablet */
@@ -209,7 +239,7 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container ,.sponsors-img-container {
         flex-direction: column;
     }
 
