--- a/styles/architect.css
+++ b/styles/architect.css
@@ -199,7 +199,39 @@ main {
 .sponsors-img-container img {
     width: 159.56px;
 
-    
+
+}
+
+/* features styles */
+.features {
+    display: flex;
+    margin-top: 130px;
+    gap: 100px;
+}
+
+.features .section-title {
+    border-left: 5px solid orange;
+    padding-left: 20px;
+}
+
+.feature-content .card {
+    border-radius: 8px;
+    padding: 30px;
+    margin-bottom: 20px;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+
+    background: rgb(255, 255, 255);
+}
+
+.ten-years-badge{
+    border-radius: 8px;
+    color: rgb(255, 255, 255);
+     width: 342px;
+    background: rgb(255, 144, 14);
+    padding: 40px;
+}
+.ten-years-badge h2{
+    font-size: 4rem;
 }
 
 /* responsive media queries mobile  */
@@ -239,7 +271,8 @@ main {
     }
 
     nav,
-    .teams-container ,.sponsors-img-container {
+    .teams-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
 
