--- a/styles/architect.css
+++ b/styles/architect.css
@@ -223,16 +223,59 @@ main {
     background: rgb(255, 255, 255);
 }
 
-.ten-years-badge{
+.feature-img img {
+    height: 90%;
+    margin-left: 90px;
+}
+
+.ten-years-badge {
     border-radius: 8px;
     color: rgb(255, 255, 255);
-     width: 342px;
+    width: 340px;
     background: rgb(255, 144, 14);
     padding: 40px;
+    position: relative;
+    bottom: 100px;
 }
-.ten-years-badge h2{
+
+.ten-years-badge h2 {
     font-size: 4rem;
+    margin: 0;
 }
+
+.ten-years-badge p {
+    text-align: center;
+    font-size: 1.5rem;
+}
+/* footer styles */
+footer{
+   
+}
+.footer {
+    text-align: center;
+    margin: 0 auto;
+     width: 1440px;
+    height: 50px;
+    border: 8px;
+
+    border-radius: 8px;
+
+
+    background: rgb(255, 244, 231);
+    padding: 40px;
+}
+
+footer h2 {
+    color: rgb(66, 66, 66);
+
+
+
+    font-size: 20px;
+
+    font-weight: 400;
+
+}
+
 
 /* responsive media queries mobile  */
 @media screen and (max-width: 576px) {
@@ -243,8 +286,19 @@ main {
     nav,
     .teams-container,
     .facts-card-container,
-    .sponsors-img-container {
+    .sponsors-img-container,
+    .features {
         flex-direction: column;
+    }
+
+    .feature-img img {
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten-years-badge {
+
+        max-width: 300px;
     }
 
     .teams-img-container {
@@ -260,8 +314,14 @@ main {
     .facts-card-container {
         gap: 20px;
     }
+    .footer{
+        width: 100%;
+        padding: 0;
+    }
+
 
 }
+
 
 /* responsive media queries tablet */
 
@@ -272,8 +332,12 @@ main {
 
     nav,
     .teams-container,
-    .sponsors-img-container {
+    .sponsors-img-container,
+    .features {
         flex-direction: column;
+    }
+    .footer{
+        width: 100%;
     }
 
 
